bitcoin-core/dev/bitcoin-core.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bitcoin-core-deployment
  labels:
    app: bitcoin-core-app
    tier: bitcoin
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bitcoin-core-app
        tier: bitcoin
    spec:
      volumes:
      - name: bitcoin-core-pv-storage
        persistentVolumeClaim:
          claimName: bitcoin-dev-pv-claim
      containers:
      - name: bitcoin-core
        image: "ruimarinho/bitcoin-core:latest"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: bitcoin-core-pv-storage
          mountPath: "/home/bitcoin/.bitcoin"
---
apiVersion: v1
kind: Service
metadata:
  name: bitcoin-core-service
  labels:
    tier: bitcoin
spec:
  selector:
    app: bitcoin-core-app
    tier: bitcoin
  ports:
  - port: 18443
    targetPort: 18443
    protocol: TCP
    name: bitcoin-core-port
  type: LoadBalancer
